# oncollamaschemav3

./: README.md  pyproject.toml  validate.py
oncollamaschemav3/: __init__.py  oncollamaschemav3.py  prompt.py  validate.py
oncollamaschemav3/prompts/: infer_prompt.txt
prompts/: infer_prompt.txt
