[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "oncollamaschemav3"
version = "0.9.0"
description = "Pydantic schema for OncoLlamaV3 - cancer data extraction"
authors = [{name = "Dr. Joe Zhang", email = "jzhang@nhs.net"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]